Netty overlay: kind=tests for transport test helpers.
Rename product→kind on Mill testModuleDeps edges, drop synthetic
nativeimage-testutil, patch ChannelHandlerMetadataUtil so transport test
compile survives NativeImage* curate, and add codec TransportTestsKindSmokeTest
to prove sibling kind=tests is on the test classpath.